...
    <string name="account_signed_in">Oma tili</string>
    <string name="account_anonymous">Ilman kirjautumista</string>
    <string name="account_local_notice">Kotitalouden tehtävät synkronoituvat, kun yhteys on käytettävissä. Paikallisen listan tehtävät pysyvät tällä laitteella, kunnes valitset ne tuotaviksi kotitalouteen.</string>
    <string name="account_installation_reset">Asennuksen tunniste puuttui tai ei vastannut tiedostoja. Vanhat tiedostot on eristetty. Kirjaudu uudelleen uuden laiterekisteröinnin luomiseksi. Salattuja tiedostoja ei voi avata ilman alkuperäistä laiteavainta.</string>
    <string name="account_pending">Tallennettuja tekstejä: %1$d · Äänityksiä: %2$d</string>
    <string name="account_operation_failed">Toiminto epäonnistui. Lähdetiedot säilyvät. Yritä uudelleen.</string>
    <string name="account_export_warning">Vienti sisältää yksityistä tekstiä. Valitse tallennuspaikka huolella. Äänitteet viedään erikseen puhevalikosta.</string>
    <string name="account_exported">Teksti viety. Alkuperäiset tiedot säilyvät.</string>
    <string name="account_export_json">Tallenna palautustiedosto, osa %1$d</string>
    <string name="account_export_text">Tallenna luettava teksti, osa %1$d</string>
    <string name="account_import_preview">Tuo ennen kirjautumista tallennetut tehtävät</string>
    <string name="account_import_notice">Valitut tekstit kopioidaan uusina paikallisina tehtävinä. Alkuperäiset säilyvät. Kotitalouteen siirto vaatii myöhemmin erillisen valinnan.</string>
    <string name="account_import_selected">Kopioi paikalliselle listalle</string>
...
